--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.29",
-    "nodemon": "^2.0.14",
-    "yup": "^0.32.11"
+    "mongoose": "^5.9.29"
   }
 }
